# skku-2-openai_pa1

./: .gitignore  README.md  main.ipynb  pyproject.toml  report.docx
project01/src/: eval.py  flops.py  infer.py  train.py
project01/src/config/: config.py  default.yaml
project01/src/data/: build.py  coco_voc.py  transforms.py  transforms_origin.py  visualize_aug.py  voc.py
project01/src/engine/: checkpoint.py  evaluator.py  trainer.py
project01/src/models/: backbone.py  build.py  seg_model.py
project01/src/utils/: logger.py  metric.py  seed.py  visualization.py
src/: eval.py  flops.py  infer.py  main.ipynb  train.py
src/config/: config.py  default.yaml
src/data/: build.py  coco_voc.py  transforms.py  transforms_origin.py  visualize_aug.py  voc.py
src/engine/: checkpoint.py  evaluator.py  trainer.py
src/models/: backbone.py  build.py  seg_model.py
src/utils/: logger.py  metric.py  seed.py  visualization.py
tools/: README.md  grader_flops.py
